--- a/app/assets/stylesheets/registration.scss
+++ b/app/assets/stylesheets/registration.scss
@@ -9,6 +9,9 @@
   &.registered {
     background-color: palegreen;
   }
+  &.full {
+    background-color: red;
+  }
   h3 {
     flex-grow: 1;
     margin: 0 2rem;
